Fix player photo cropping to show face instead of mid-torso

--- a/src/components/PlayerCard.module.css
+++ b/src/components/PlayerCard.module.css
@@ -65,6 +65,7 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+  object-position: top;
   border-radius: 50%;
 }
 
